test/TestPhases/typechecker/invalid/initOpaqueMissing.blc
import M "../imports/moduleToImport"

module

activity X()
    await true
    var t2: M.T // error not initialised
end